# p_task_manager

./: README.md  pyproject.toml  tasks.db
TaskManager_BrenoJuan/: pyproject.toml
TaskManager_BrenoJuan/projetobreno/: app4.py  app5.py  app6.py  app7_UF.py  app8_Comments  app8_NF.py  app8_UF.py
TaskManager_BrenoJuan/projetofinal/: task_manager_api.py  task_manager_db.py  task_manager_ui.py  tmapi_comments.py  tmdb_comments.py  tmui_comments.py
TaskManager_BrenoJuan/testecalculator/: calculator.py  fast_api.py  stream_lite.py
