[tool.poetry]
name = "taskmanager-brenojuan"
version = "0.1.0"
description = "Projeto focado em criar um gerenciador de tarefas"
authors = ["BrenoJuan <brenojuandafonsecasilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
